--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ethers": "^6.13.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "thirdweb": "^5.51.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
